# trueminds-deliverable

./: .env  .gitignore  README.md  pyproject.toml
app/: main.py  models.py
app/api/: deps.py
app/api/routes/: cart.py  foods.py  orders.py  users.py
app/core/: cache.py  database.py  settings.py  utils.py
app/models/: core.py  foods.py  link_models.py  orders.py  pagination.py  users.py
app/schemas/: auth_schema.py  cart_schema.py  foods_schema.py  order_schema.py  users.py
app/services/: auth.py  auth_services.py  cart_services.py  email_services.py  otp_services.py
